--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,15 +4,17 @@ on: [push, pull_request]
 
 jobs:
   job1:
+    environment:
+      name: testing
     env:
-      DATABASE_HOSTNAME=localhost
-      DATABASE_PORT=5432
-      DATABASE_PASSWORD=Boulogne_1981
-      DATABASE_NAME=fastapi
-      DATABASE_USERNAME=postgres
-      SECRET_KEY=09d25e094faa6ca2556c818166b7a9563b93f7099f6f0f4caa6cf63b88e8d3e7
-      ALGORITHM=HS256
-      ACCESS_TOKEN_EXPIRE_MINUTES=60
+      DATABASE_HOSTNAME: ${{secret.DATABASE_HOSTNAME}}
+      DATABASE_PORT: ${{secret.DATABASE_PORT}}
+      DATABASE_PASSWORD: ${{secret.DATABASE_PASSWORD}}
+      DATABASE_NAME: ${{secret.DATABASE_NAME}}
+      DATABASE_USERNAME: ${{secret.DATABASE_USERNAME}}
+      SECRET_KEY: ${{secret.SECRET_KEY}}
+      ALGORITHM: ${{secret.ALGORITHM}}
+      ACCESS_TOKEN_EXPIRE_MINUTES: ${{secret.ACCESS_TOKEN_EXPIRE_MINUTES}}
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
