--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -7,14 +7,14 @@ jobs:
     environment:
       name: testing
     env:
-      DATABASE_HOSTNAME: "${{secret.DATABASE_HOSTNAME}}"
-      DATABASE_PORT: "${{secret.DATABASE_PORT}}"
-      DATABASE_PASSWORD: "${{secret.DATABASE_PASSWORD}}"
-      DATABASE_NAME: "${{secret.DATABASE_NAME}}"
-      DATABASE_USERNAME: "${{secret.DATABASE_USERNAME}}"
-      SECRET_KEY: "${{secret.SECRET_KEY}}"
-      ALGORITHM: "${{secret.ALGORITHM}}"
-      ACCESS_TOKEN_EXPIRE_MINUTES: "${{secret.ACCESS_TOKEN_EXPIRE_MINUTES}}"
+      DATABASE_HOSTNAME: ${{DATABASE_HOSTNAME}}
+      DATABASE_PORT: ${{DATABASE_PORT}}
+      DATABASE_PASSWORD: ${{DATABASE_PASSWORD}}
+      DATABASE_NAME: ${{DATABASE_NAME}}
+      DATABASE_USERNAME: ${{DATABASE_USERNAME}}
+      SECRET_KEY: ${{SECRET_KEY}}
+      ALGORITHM: ${{ALGORITHM}}
+      ACCESS_TOKEN_EXPIRE_MINUTES: ${{ACCESS_TOKEN_EXPIRE_MINUTES}}
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
