--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -32,15 +32,41 @@ jobs:
     steps:
       - name: pulling git repo
         uses: actions/checkout@v3
+
       - name: Install python version 3.10
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+
       - name: update pip
         run: python -m pip install --upgrade pip
+
       - name: install all dependencies
         run: pip install -r requirements.txt
+
       - name: test with pytest
         run: |
          pip install pytest
          pytest
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: user/app:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
