--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -77,17 +77,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
-    environment:
-      name: production
 
     steps:
-      - name: pulling git repo
-        uses: actions/checkout@v3
-
-      - name: deploying to Heroku
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
+      - name: test deploy
+        run: echo "test"
