--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -73,12 +73,7 @@ jobs:
 #        run: |
 #          rm -rf /tmp/.buildx-cache
 #          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-      - name: deploying to Heroku
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
+
 
   deploy:
     runs-on: ubuntu-latest
@@ -91,7 +86,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: deploying to Heroku
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      - uses: see/heroku-deploy@master # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
