--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -86,7 +86,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: deploying to Heroku
-      - uses: see/heroku-deploy@master # This is the action
+      - uses: see/heroku-deploy@main # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
