--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -116,4 +116,5 @@ jobs:
           script: |
             cd app/src
             sudo git pull origin main
-            echo ${{ secrets.UBUNTU_PASSWORD }} | sudo -S systemctl restart api
+            whoami
+            # echo ${{ secrets.UBUNTU_PASSWORD }} | sudo -S systemctl restart api
