--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -114,4 +114,6 @@ jobs:
           password: ${{ secrets.UBUNTU_PASSWORD }}
           # port: ${{ secrets.UBUNTU_PORT }}
           script: |
-            whoami
+           cd app/src
+           sudo git pull origin main
+          echo ${{ secrets.UBUNTU_PASSWORD }} | sudo -S systemctl restart api
